--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 
 
 # Change title and subtitle of the page
-title: "consys - simply consistent."
+title: "consysT - simply consistent."
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Language and middleware for programming with consistent, replicated data.
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 github_username: mkoee
 
 # displays download button on the .io page
-show_downloads: true
+show_downloads: false
 
 # Build settings
 # markdown: kramdown
@@ -33,6 +33,9 @@ theme: jekyll-theme-slate
 plugins:
 #  - jekyll-feed
   - "jekyll-github-metadata"
+
+github:
+  repository_url: https://github.com/consyst-project/consyst-code
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
